Modified iceberg changelogs article title

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           <p>Notes on complex software systems.</p>
 
           <div class="article-item article-item--featured">
-            <a href="/writing/cow-changelog-semantics">
-              Copy-on-Write and Changelog Semantics in Apache Iceberg
+            <a href="/writing/iceberg-changelogs">
+              Apache Iceberg Changelogs Are Not Semantic Diffs
             </a>
             <span class="article-date">December 2025</span>
           </div>
